--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/AntonioXIII/TradePoster/issues"
   },
-  "homepage": "https://github.com/AntonioXIII/TradePoster#readme"
+  "homepage": "https://github.com/AntonioXIII/TradePoster#readme",
+  "dependencies": {
+    "@slack/web-api": "^6.7.2",
+    "prompt-sync": "^4.2.0"
+  }
 }
