--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/AntonioXIII/TradePoster#readme",
   "dependencies": {
     "@slack/web-api": "^6.7.2",
+    "google-spreadsheet": "^3.3.0",
     "prompt-sync": "^4.2.0"
   }
 }
